--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
 }
 
 main {
-  background-image: url("images/wallpaper.jpg");
+  background-image: url("/images/wallpaper.jpg");
 }
 
 .bar-bg {
