Add sign in page

--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,12 @@
 *,
 *::before,
 *::after {
-  border: 0;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   outline: 0;
   text-rendering: optimizeLegibility;
   user-select: none;
-  color: white;
 }
 
 ::-webkit-scrollbar {
@@ -33,12 +31,12 @@
   background-color: rgb(167, 167, 167);
 }
 
-main {
+.desktop {
   background: url("/images/wallpaper.png") no-repeat center center;
 }
 
 @media only screen and (max-width: 1300px) {
-  main {
+  .desktop {
     background: #151515;
   }
 }
